enable tree-shaking

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "author": "adi518",
   "license": "MIT",
+  "private": true,
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "repository": "adi518/react-components",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
   "files": [
     "dist"
   ],
@@ -43,11 +43,12 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@babel/preset-react": "^7.8.3",
-    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-babel": "^5.0.4",
+    "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "@rollup/plugin-url": "^4.0.2",
-    "@svgr/rollup": "^4.3.3",
+    "@rollup/plugin-node-resolve": "^8.1.0",
+    "@rollup/plugin-url": "^5.0.1",
+    "@svgr/rollup": "^5.4.0",
     "babel-plugin-prismjs": "^2.0.1",
     "cross-env": "^7.0.0",
     "eslint": "^6.8.0",
@@ -57,11 +58,10 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "^3.4.0",
-    "rollup": "^1.31.1",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-filesize": "^6.2.1",
+    "rollup": "^2.21.0",
+    "rollup-plugin-filesize": "^9.0.2",
     "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^2.1.1",
+    "rollup-plugin-postcss": "^3.1.2",
     "styled-components": "^5.0.1"
   },
   "eslintConfig": {
